# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  parser.py  utils.py
page_analyzer/templates/: index.html  url.html  urls.html
